--- a/panchristism.html
+++ b/panchristism.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panchristism - Blessed Raven</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,95 +14,11 @@
         }
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
-            color: #ff3333;
-            text-align: center;
+            background: linear-gradient(180deg, #0a0015, #1a0000, #2b0010);
+            color: #ffffff;
             overflow-x: hidden;
-            cursor: none;
             min-height: 100vh;
             position: relative;
-        }
-        .cursor {
-            position: fixed;
-            width: 25px;
-            height: 25px;
-            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
-            border: 2px solid #ff6666;
-            border-radius: 50%;
-            pointer-events: none;
-            z-index: 9999;
-            transition: transform 0.1s ease;
-        }
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.95);
-            padding: 20px 0;
-            z-index: 1000;
-            border-bottom: 4px solid #ff3333;
-            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
-            transition: background 0.3s ease;
-        }
-        nav.scrolled {
-            background: rgba(0, 0, 0, 0.98);
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-        }
-        nav ul li a {
-            color: #ff3333;
-            text-decoration: none;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.3em;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            transition: color 0.3s, transform 0.3s;
-        }
-        nav ul li a:hover {
-            color: #ffd700;
-            transform: scale(1.1);
-            text-shadow: 0 0 20px #ff3333;
-        }
-        header {
-            padding: 150px 20px 80px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
-            border-bottom: 6px solid #ff3333;
-            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
-            position: relative;
-            z-index: 500;
-        }
-        h1 {
-            font-family: 'Cinzel Decorative', cursive;
-            font-size: 6em;
-            color: #ff3333;
-            text-transform: uppercase;
-            letter-spacing: 6px;
-            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
-            animation: neonFlicker 1.5s infinite alternate;
-        }
-        @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
-            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
-        }
-        .sacred-geometry {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 400px;
-            opacity: 0.1;
-            z-index: -1;
-            animation: rotateGeometry 30s infinite linear;
-        }
-        @keyframes rotateGeometry {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
         }
         #particles-js {
             position: fixed;
@@ -110,113 +26,31 @@
             height: 100%;
             top: 0;
             left: 0;
-            z-index: -2;
+            z-index: -1;
         }
-        .content-section {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 50px;
-            background: rgba(255, 51, 51, 0.1);
-            border: 4px solid #ff3333;
-            border-radius: 25px;
-            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
-            position: relative;
-            z-index: 400;
-            transition: transform 0.5s ease;
-        }
-        .content-section:hover {
-            transform: translateY(-10px);
-        }
-        h2 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3em;
-            margin-bottom: 25px;
-            color: #ffd700;
-            text-shadow: 0 0 20px #ff3333;
-        }
-        p {
-            font-size: 1.5em;
-            line-height: 2;
-            color: #ff9999;
-        }
-        footer {
-            background: rgba(0, 0, 0, 0.95);
-            padding: 25px;
+        nav {
             position: fixed;
-            bottom: 0;
+            top: 0;
             width: 100%;
-            border-top: 4px solid #ff3333;
-            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
-            color: #ff9999;
-            font-size: 1.2em;
-            z-index: 500;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px 0;
+            z-index: 1000;
+            border-bottom: 2px solid #ff3333;
+            box-shadow: 0 5px 20px rgba(255, 51, 51, 0.5);
         }
-    </style>
-</head>
-<body>
-    <div id="particles-js"></div>
-    <div class="sacred-geometry"></div>
-    <div class="cursor"></div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#lore">Lore</a></li>
-            <li><a href="index.html#mission">Mission</a></li>
-            <li><a href="index.html#explore">Explore</a></li>
-            <li><a href="family-tree.html">Family Tree</a></li>
-            <li><a href="donate.html">Donate</a></li>
-        </ul>
-    </nav>
-    <header>
-        <h1>Panchristism</h1>
-    </header>
-    <main>
-        <div class="content-section">
-            <h2>A New Religion of Unity</h2>
-            <p>Panchristism, founded by Jacob Ryan Judah Clement Mawr Dawn, is a revolutionary spiritual path that unites the primal vitality of the Greek god Pan with the divine love of Christ, rooted in the panentheistic belief that the divine permeates all existence while transcending it. This religion celebrates the divine in all creation, recognizing the Christ within each individual as a guiding light of wisdom and love, and embracing Pan’s untamed spirit as the heartbeat of nature’s interconnectedness. Panchristism balances opposites—chaos and order, wildness and serenity—through the concept of sacred duality, fostering harmony in the universe.</p>
-            <p>Practices include nature worship through seasonal festivals, outdoor meditation, and environmental stewardship; inner contemplation via meditation and prayer to connect with the inner Christ; joyous music and dance inspired by Pan; community service to express divine love; and rituals celebrating the balance of opposites. Sacred texts are drawn from panentheistic traditions: the Holy Bible for moral teachings, the Gospel of Thomas for inner divinity, the Upanishads and Bhagavad Gita from Hinduism, the Avatamsaka Sutra from Buddhism, Rumi’s poetry from Sufism, and Native American teachings of the Great Spirit. Symbols of Panchristism include the Six-Petal Flower (Seed of Life) for interconnectedness, the Quatrefoil for harmony, the Trinity Knot for the triune divine (Pan, Christ, universal essence), and the Torus for infinite energy flow.</p>
-            <p>In Panchristism, every space is sacred—nature, homes, and digital realms can be temples. Personal altars with sacred symbols and community gatherings in natural settings foster connection. Leadership emerges through internal work, balancing Pan’s energy with Christ’s love, guided by divine visions received through meditation and nature communion. Panchristism emphasizes unity (“All is One, One is All”), encouraging direct experience of the divine through knowledge, feeling, and practice.</p>
-        </div>
-    </main>
-    <footer>
-        <p>© 2025 Blessed Raven. All rights reserved.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            "particles": {
-                "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ff3333" },
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.6, "random": true },
-                "size": { "value": 4, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.4, "width": 1 },
-                "move": { "enable": true, "speed": 3, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
-            },
-            "interactivity": {
-                "detect_on": "canvas",
-                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
-                "modes": { "repulse": { "distance": 120, "duration": 0.4 }, "push": { "particles_nb": 5 } }
-            },
-            "retina_detect": true
-        });
-
-        const cursor = document.querySelector('.cursor');
-        document.addEventListener('mousemove', e => {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        });
-        document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
-        document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
-
-        window.addEventListener('scroll', () => {
-            const nav = document.querySelector('nav');
-            if (window.scrollY > 50) {
-                nav.classList.add('scrolled');
-            } else {
-                nav.classList.remove('scrolled');
-            }
-        });
-    </script>
-</body>
-</html>
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+        }
+        nav ul li a {
+            color: #ffffff;
+            text-decoration: none;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.2em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: color 0.3s, transform 0.3s;
+        }
+        nav
